API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

23-Oct-2000
		Joachim Ansorg <jansorg@crosswire.org> 
	Changed the provate section of versekey.h into a protected  one
because we need the change for current BibleTime!

15-Oct-2000	Troy A. Griffitts <scribe@crosswire.org>
	Normalized Writable interface to SWModule.
	Fixed RawVerse settext to correctly append a dos nl.
	Fixed vpl2mod to correctly strip 10s and 13s from input.
	Added verse ref parsing functionality to vpl2mod.
	Added new 'getRawEntry()' pure virtual to each driver.
		Changed from operator char *().  Moved operator char *
		to SWModule.
	Created define FILTERPAD to replace hard coded padding in
		each driver.
	Added write link support in RawText.
	Added new test introtest to test module intros.
	Fixed abbrev parsing to see Phil as Php.
	
05-Sep-2000	Joachim Ansorg <jansorg@gmx.de>
	Fixed a problem in Makefile.cfg with profiler support and
		non-debugging lib (-s removes the profiler support,
		changed it)

30-Aug-2000	Troy A. Griffitts <scribe@crosswire.org>
	Fixed mod2vpl to strip any existing \n's from data before
		writing the data.
	Added new utility which reads a verse per line (vpl) file
		and creates a new module.
	Fixed RawVerse::CreateModule.
	Implimented write functionality in RawText with a call to
		RawVerse::settext.
	Changed write functionality in RawVerse driver which appends
		the new entry to the end of the data file and resets
		the index to this new location.

28-Aug-2000	Troy A. Griffitts <scribe@crosswire.org>
	Added new utility to output a verse module one line per
		verse (utilities/mod2vpl)

22-Aug-2000	Joachim Ansorg <jansorg@gmx.de>
	Added Slovak translation of booknames made by Zdeno <zdpo@post.sk>

16-Aug-2000	Joachim Ansorg <jansorg@gmx.de>
	Fixed utilities/mkfastmod.cpp
	Added a template for translations of international booknames 
		(doc/translation-template.conf).

14-Aug-2000	Troy A. Griffitts <scribe@crosswire.org>